dissolving bone in armature edit mode changes armature hierarchy #54348

Closed
opened 2018-03-17 22:45:53 +01:00 by Ervin Weber · 3 comments

System Information
Win8 Intel integrated graphics
Win7 nVidia 980

Blender Version
Broken: 2.79a 8928d99270

Short description of error
Dissolving (Ctrl-X) a bone in an armature works as intended but, on a subsequent edit operation (say moving a bone), the remaining bones parenting changes from connected to offset and vice versa.

Exact steps for others to reproduce the error

Look at the leftmost armature in the file:

  • enter edit mode and select the B bone head (or A tail)
  • dissolve it and it should look like the "Armature.001" at the center
  • now try to grab and move something...
  • D head will immediatelly jump and connect to A tail (as in Armature.002)
  • if you moved something else A tail would have moved to D head position

armature dissolve bug.blend

**System Information** Win8 Intel integrated graphics Win7 nVidia 980 **Blender Version** Broken: 2.79a 8928d99270f **Short description of error** Dissolving (Ctrl-X) a bone in an armature works as intended but, on a subsequent edit operation (say moving a bone), the remaining bones parenting changes from connected to offset and vice versa. **Exact steps for others to reproduce the error** Look at the leftmost armature in the file: - enter edit mode and select the B bone head (or A tail) - dissolve it and it should look like the "Armature.001" at the center - now try to grab and move something... - D head will immediatelly jump and connect to A tail (as in Armature.002) - if you moved something else A tail would have moved to D head position [armature dissolve bug.blend](https://archive.blender.org/developer/F2452768/armature_dissolve_bug.blend)
Author

Added subscriber: @ErvinWeber

Added subscriber: @ErvinWeber

This issue was referenced by 865fbe343a

This issue was referenced by 865fbe343a9067f342c45fb2a1a63eca0f7cf2d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54348
No description provided.