Fix T54348: Bone dissolve gives invalid hierarchy

Disconnected bones weren't handled correctly.